# EmptyProject

./: CMakeLists.txt  main.cpp
data/exam/: economy.md  grigory.md
data/exam/1. Основы синтаксиса языка C++/: 1. Целочисленные типы данных.md  10. Приведение типа.md  11. Управление ходом выполнения программы.md  12. Функции.md  13. Структуры.md  14. Массивы.md  15. Ссылки.md  16. Пространства имён.md  17. Модель памяти C++.md  18. Указатели.md  19. Статическое, автоматическое и динамическое размещение объектов в памяти.md  2. Типы данных вещественных чисел.md  20. Память.md  3. Логический тип данных.md  4. Символьные литералы.md  5. Строковые литералы.md  6. Операторы.md  7. Переменные.md  8. Синонимы типов.md  9. Перечислимый тип данных.md
data/exam/2. Стандартная библиотека языка C++/: 1. string и string_view.md  10. optional.md  11. variant.md  12. Стандартные умные указатели.md  13. Ввод-вывод.md  14. function и lambda.md  2. vector и array.md  3. deque.md  4. list и forward_list.md  5. Контейнеры map и multimap.md  6. Контейнеры unordered_map и unordered_multimap.md  7. Контейнеры set и multiset.md  8. Контейнеры unordered_set и unordered_multiset.md  (+1 more)
data/lections/: 1. Синтаксис C++.md  2. Стандартная библиотека.md  3. Основы ООП.md  4. Виды отношений между классами.md  5. Наследование и полиморфизм.md  6. Дружественные функции и классы. Перегрузка операций.md  7. Обработка ошибок и исключительных ситуаций.md  8. Указатели и динамическая память.md  9. Обобщенное программирование, шаблоны.md  lection1.md
include/: Demo.h
src/: Demo.cpp
tests/: tests.cpp
(+14 files in other folders)
